# sd-twitter-x-backend-mvp

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  README.md  alembic.ini  design.md  docker-compose.yml  pyproject.toml  requirements.txt  twitter_x_test.db
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_recency_decay.py  09bb7eb6ec2a_extend_username_to_50.py  1093b16c00af_initial_schema.py
src/twitter_x/: config.py  database.py  main.py  redis.py
src/twitter_x/models/: follow.py  hashtag.py  tweet.py  user.py
src/twitter_x/routers/: __init__.py  health.py  search.py  timeline.py  trends.py  tweets.py  users.py
src/twitter_x/schemas/: common.py  search.py  timeline.py  trends.py  tweet.py  user.py
src/twitter_x/services/: search_service.py  timeline_service.py  trending_service.py  tweet_service.py  user_service.py
src/twitter_x/workers/: fanout_worker.py  trending_worker.py
tests/: conftest.py  test_healthz.py
verify/: manifest.env
verify/acceptance/: conftest.py  test_fr1_post_tweet.py  test_fr2_home_timeline.py  test_fr3_profile_timeline.py  test_fr4_search.py  test_fr5_follow.py  test_fr6_trending.py  test_fr_user_crud.py  test_healthz.py
