[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "twitter-x"
version = "0.1.0"
description = "Twitter/X backend MVP — FastAPI + PostgreSQL + Redis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "redis[hiredis]>=5.0,<6.0",
    "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["twitter_x*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["E501", "W291"]
"tests/**" = ["E501", "F841", "UP"]
"verify/**" = ["E501", "F841", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.alembic]
script_location = "alembic"
